--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -249,10 +249,12 @@ Coloring is an essential aspect of molecular visualization, as it can provide ad
 - By element: Atoms are colored according to their chemical element (e.g., carbon in grey, oxygen in red, nitrogen in blue).
 - By partial atomic charge: Atoms or residues are colored according to their charge or charge sum. Negative charges are depicted in red, positive charges in blue.
 
-\section{Visualization software}
+\section{Molecular visualization software}
 \label{section:visualization_software}
 
-There are numerous software tools available for visualizing molecular data, with varying levels of complexity, customization, and features. Two widely used tools are LiteMol and Mol*.
+There are numerous software tools available for visualizing molecular data, with varying levels of complexity, customization, and features. Some of the most popular tools include MolScript \parencite{kraulis1991molscript}, PyMOL \parencite{delano2002pymol}, VMD \parencite{humphrey1996vmd}, and ChimeraX \parencite{goddard2018ucsf}. More recently, web-based tools, such as LiteMol \parencite{sehnal2017litemol} and Mol* \parencite{sehnal2021molstar}, have become increasingly popular due to their accessibility and ease of use. Furthermore, these web-based tools are especially useful for visualizing large macromolecular complexes, which are becoming increasingly common due to advances in structural biology techniques such as crystallography and electron microscopy. \parencite{sehnal2021molstar}
+
+In the following sections, we will discuss the two web-based molecular visualization tools used in this work: LiteMol and Mol*.
 
 \subsection{Litemol}
 \label{subsection:litemol}
@@ -266,7 +268,7 @@ The LiteMol suite is a freely available tool for visualizing large macromolecula
 
 \parencite{sehnal-molstar}
 
-Mol* (\textipa{/"molstar/}) is another web-native molecular visualization tool, developed as part of the wwPDB OneDep system for macromolecular structure deposition and validation. Mol* offers a wide range of visualization options, including advanced features such as electron density maps and validation reports. Mol* supports many file formats, including PDB, mmCIF, and PDBx/mmJSON. Like LiteMol, Mol* is platform-independent and can be accessed from any web browser.
+Mol* (/'molstar/) is another web-native molecular visualization tool, developed as part of the wwPDB OneDep system for macromolecular structure deposition and validation. Mol* offers a wide range of visualization options, including advanced features such as electron density maps and validation reports. Mol* supports many file formats, including PDB, mmCIF, and PDBx/mmJSON. Like LiteMol, Mol* is platform-independent and can be accessed from any web browser.
 
 Mol* emphasizes interactivity and offers various tools for manipulating and analyzing the molecular structure, such as distance and angle measurements, selection and display of specific residues, and custom coloring schemes. Additionally, Mol* provides integration with external databases and services, such as UniProt, PDBe, and RCSB PDB, enabling users to quickly access related information and resources.
 
@@ -343,6 +345,15 @@ The residue charges are calculated by summing the charges of the atoms that make
 The maximum absolute charge values of the atoms and residues are calculated and stored in the \texttt{maxAbsoluteAtomCharges} and \texttt{maxAbsoluteResidueCharges} maps. These maps are used in the color theme provider to normalize the charges to the range of 0 to 1. Additionally, the maximum absolute charge values are used to calculate the color interpolations in the color theme provider. Additionally, the maximum absolute charge of both atoms and residues is calculated and stored in the \texttt{maxAbsoluteChargesAll} map.
 
 Lastly, the method name used to calculate the charges of a given charge set is stored in the \texttt{typeIdToMethod} map. This map is used to display the method name in the UIs.
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=\textwidth]{out/figures/uml/interface/custom model property interface.png}
+  \end{center}
+  \caption{Interface of the custom model property for storing partial atomic charges.}
+  \label{fig:property_provider_interface}
+\end{figure}
+
 
 \begin{figure}[htbp]
   \caption{Interface of the custom model property for storing partial atomic charges.}
@@ -510,13 +521,13 @@ The following subsections describe the necessary changes made to the ACC2 applic
 
 As previously explained in section \ref{section:multicharge_support}, the ACC2 application used to limit the user to selecting only one combination of method and parameters. This limitation was resolved by introducing new controls to the calculation setup.
 
-Figure \ref{fig:new_setup} shows the updated setup site for the ACC2 application. The site now contains a list of calculations, where each calculation represents a combination of method and parameters. The list is initially empty and the user can add a new calculation to the list by selecting the desired method and parameters from the drop-down menus and clicking the \textit{Add to calculation} button. The user can also remove any calculation from the list by clicking the cross button next to the calculation name. The list of calculations is then sent to the backend where it is used to generate the desired charge sets for the user's input file.
+Figure \ref{fig:new_setup} shows the updated setup page for the ACC2 application. The page now contains a list of calculations, where each calculation represents a combination of method and parameters. The list is initially empty and the user can add a new calculation to the list by selecting the desired method and parameters from the drop-down menus and clicking the \textit{Add to calculation} button. The user can also remove any calculation from the list by clicking the cross button next to the calculation name. The list of calculations is then sent to the backend where it is used to generate the desired charge sets for the user's input file.
 
 \begin{figure}[htbp]
   \begin{center}
     \includegraphics[width=\textwidth]{figures/new_setup.png}
   \end{center}
-  \caption{Updated setup site for the ACC2 application.}
+  \caption{Updated setup page for the ACC2 application.}
   \label{fig:new_setup}
 \end{figure}
 
@@ -529,9 +540,9 @@ After all the calculations have been completed, the dictionary is used to genera
 \section{Mol* viewer integration}
 \label{section:viewer_integration}
 
-Figure \ref{fig:result_site} shows the result site for the ACC2 application with the Mol* viewer. The Mol* viewer is integrated into the result site by initializing the custom viewer plugin, loading the mmCIF file generated by the backend, and configuring the viewer to visualize the charge values.
+Figure \ref{fig:result_page} shows the result page for the ACC2 application with the Mol* viewer. The Mol* viewer is integrated into the result page by initializing the custom viewer plugin, loading the mmCIF file generated by the backend, and configuring the viewer to visualize the charge values.
 
-Additionally, the site allows the user to change the coloring and visualization of the structure. The structure can be visualized as a ball-and-stick model, as a surface model, or if applicable as a cartoon model. The user has also the option to choose the coloring. The structure can be colored by partial atomic charges or by the element symbol of each atom. The user can also set the maximum charge value that will be used for the coloring or reset the maximum charge value to the default value.
+Additionally, the page allows the user to change the coloring and visualization of the structure. The structure can be visualized as a ball-and-stick model, as a surface model, or if applicable as a cartoon model. The user has also the option to choose the coloring. The structure can be colored by partial atomic charges or by the element symbol of each atom. The user can also set the maximum charge value that will be used for the coloring or reset the maximum charge value to the default value.
 
 The user can download all the output files generated by the backend by clicking the \textit{Download charges} button. This button downloads a ZIP archive containing all the output files, which are organized into folders for each file format.
 
@@ -539,17 +550,33 @@ The user can download all the output files generated by the backend by clicking 
   \begin{center}
     \includegraphics[width=\textwidth]{figures/results-full.png}
   \end{center}
-  \caption{Result site for the ACC2 application with the Mol* viewer.}
-  \label{fig:result_site}
+  \caption{Result page for the ACC2 application with the Mol* viewer.}
+  \label{fig:result_page}
 \end{figure}
 
 \chapter{AlphaCharges}
 
-AlphaCharges (αCharges) is a web application for calculating partial atomic charges for structures from AlphaFoldDB, a database of protein structures predicted by the AlphaFold2 algorithm. \parencite{jumper2021alphafold} The AlphaCharges application protonates the protein structures (adds hydrogens) and calculates the partial atomic charges for the structures with the SQE+q0 empirical method. \parencite{schindler2023alphacharges, schindler2021sqe}
+AlphaCharges (αCharges) is a web application for calculating partial atomic charges for structures from AlphaFoldDB, a database of protein structures predicted by the AlphaFold2 algorithm. \parencite{jumper2021alphafold} The AlphaCharges application protonates the protein structures (i.e. adds hydrogens) and calculates the partial atomic charges for the structures with the SQE+q0 empirical method. \parencite{schindler2023alphacharges}
 
 During the development of the AlphaCharges application, the Mol* viewer was integrated into the application to visualize the calculated partial atomic charges. The following sections describe the changes made to the Mol* viewer to support the AlphaCharges application and the integration of the Mol* viewer into the application.
 
-\section{Extension to the Mol* viewer functionality}
+\section{Integration of the the Mol* viewer}
+
+The AlphaCharges application shares the architecture with the ACC2 application. The frontend is written in Javascript with the Bootstrap framework, the backend is written in Python and uses the Flask framework. This shared architecture allowed the integration of the Mol* viewer into the AlphaCharges application with minimal adjustments.
+
+As with the ACC2 application, the Mol* viewer is integrated into the result page by initializing the plugin viewer, loading the mmCIF file generated by the backend, and mounting the controls for managing the viewer.
+
+The controls for changing the coloring and visualization type of the structures function in the same way as in the ACC2 application. However, the AlphaCharges application requires an additional control for selecting the coloring by the pLDDT confidence score described in section \ref{section:plddt_coloring}. Moreover, the AlphaCharges application does not support switching between multiple structures or switching between multiple charge sets. Therefore, the dropdown menus for selecting the structure and the charge set were ommited from the result page.
+
+The figure \ref{fig:alpha-charges-results} shows the result page for the AlphaCharges application. The additional control for changing the coloring of the structure by the pLDDT confidence score is highlighted in red.
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=\textwidth]{figures/alpha-charges-results.png}
+  \end{center}
+  \caption{Result page of the AlphaCharges application. The control for switching to the pLDDT color theme is highlighted in red.}
+  \label{fig:alpha-charges-results}
+\end{figure}
 
 \section{Coloring by pLDDT confidence score}
 
@@ -565,9 +592,9 @@ TODO: add citation for PDBx/mmCIF dictionary
 
 The creators of the AlphaCharge application requested the addition of a coloring control to the AlphaCharges result page, which would allow the user to color the structure by the pLDDT confidence score. To support this feature, the Mol* viewer was extended to include a color theme provided by the Mol* library for visualizing the pLDDT confidence score. This pLDDT color theme uses a set of colors ranging from orange to blue, where orange indicates low confidence and blue indicates high confidence. The color theme is applied to the structure by mapping the pLDDT scores to the set of colors.
 
-To support the coloring by the pLDDT confidence score in AlphaCharges, the custom Mol* viewer plugin was extended to include a function for switching to the pLDDT color theme. The AlphaCharges application then uses this function to add a new coloring control to the result site. This control is similar to the existing coloring controls, which allow the user to color the structure by the element symbol or by the partial atomic charges. The pLDDT coloring control is shown in Figure \ref{fig:alpha-charges-results}.
+To support the coloring by the pLDDT confidence score in AlphaCharges, the custom Mol* viewer plugin was extended to include a function for switching to the pLDDT color theme. The AlphaCharges application then uses this function to add a new coloring control to the result page. This control is similar to the existing coloring controls, which allow the user to color the structure by the element symbol or by the partial atomic charges. The pLDDT coloring control is shown in Figure \ref{fig:alpha-charges-results}.
 
-\subsection{Focus on problematic atoms}
+\section{Focus on problematic atoms}
 
 The AlphaCharges application cannot calculate the partial atomic charges for all protein structures. Some structures can be incorrectly predicted by the AlphaFold2 algorithm or the application can fail to protonate the structure.
 \parencite{jumper2021alphafold}
@@ -585,24 +612,6 @@ The user has the option to hover over the problematic atoms to display an explan
 \end{figure}
 
 The Mol* library provides a function to focus on a specific structure selection. The selection can be created programmatically using the Mol* query language. The query language is built using the Molscript language \parencite{kraulis1991molscript} and allows the user to select atoms based on their properties, such as their element symbol or their residue name. To focus on the problematic atom, the query language was used to first select the atom with the residue name \textit{GLN}, the residue number \textit{33}, and the atom name \textit{CD}. This combination of properties uniquely identifies the problematic atom in the structure. Then the selected atom was focused using the Mol* focus function. Figure \ref{fig:wrong_structure_focus} shows the Mol* viewer with the atom \textit{GLN 33 CD} focused
-
-\section{Mol* viewer integration}
-
-The AlphaCharges application shares the architecture with the ACC2 application. The frontend is written in Javascript with the Bootstrap framework, the backend is written in Python and uses the Flask framework. This shared architecture allowed the integration of the Mol* viewer into the AlphaCharges application with minimal adjustments.
-
-As with the ACC2 application, the Mol* viewer is integrated into the result site by initializing the custom viewer plugin, loading the mmCIF file generated by the backend, and mounting the controls for managing the viewer.
-
-The controls for changing the coloring and visualization of the structure function in the same way as in the ACC2 application. However, the AlphaCharges application requires an additional control for changing the coloring of the structure by the pLDDT confidence score. Moreover, the AlphaCharges application does not support switching between multiple structures or switching between multiple charge sets. Therefore, the dropdown menus for selecting the structure and the charge set were ommited from the result site.
-
-The figure \ref{fig:alpha-charges-results} shows the result site for the AlphaCharges application. The additional control for changing the coloring of the structure by the pLDDT confidence score is highlighted in red.
-
-\begin{figure}[htbp]
-  \begin{center}
-    \includegraphics[width=\textwidth]{figures/alpha-charges-results.png}
-  \end{center}
-  \caption{Result site of the AlphaCharges application. The control for switching to the pLDDT color theme is highlighted in red.}
-  \label{fig:alpha-charges-results}
-\end{figure}
 
 \section{Problematic atoms webpage}
 
@@ -623,10 +632,6 @@ The user can also hover over a icon adjacent to the problematic atom to display 
 \chapter*{Conclusion}
 \markright{\textsc{Conclusion}}
 \addcontentsline{toc}{chapter}{Conclusion}
-
-TODO: try to somehow mention the publications in the conclusion \\
-
-Things were created and some things even work.
 
 \printbibliography[heading=bibintoc]
 
