--- a/main.bib
+++ b/main.bib
@@ -1,4 +1,3 @@
-% ACC2
 @article{racek2020acc2,
   author   = {Raček, Tomáš and Schindler, Ondřej and Toušek, Dominik and Horský, Vladimír and Berka, Karel and Koča, Jaroslav and Svobodová, Radka},
   title    = {{Atomic Charge Calculator II: web-based tool for the calculation of partial atomic charges}},
@@ -15,7 +14,6 @@
   eprint   = {https://academic.oup.com/nar/article-pdf/48/W1/W591/33433185/gkaa367.pdf}
 }
 
-% Molstar
 @article{sehnal2021molstar,
   author   = {Sehnal, David and Bittrich, Sebastian and Deshpande, Mandar and Svobodová, Radka and Berka, Karel and Bazgier, Václav and Velankar, Sameer and Burley, Stephen K and Koča, Jaroslav and Rose, Alexander S},
   title    = {{Mol* Viewer: modern web app for 3D visualization and analysis of large biomolecular structures}},
@@ -32,7 +30,6 @@
   eprint   = {https://academic.oup.com/nar/article-pdf/49/W1/W431/38842088/gkab314.pdf}
 }
 
-% LiteMol
 ﻿@article{sehnal2017litemol,
   author  = {Sehnal, David
              and Deshpande, Mandar
@@ -56,7 +53,6 @@
   url     = {https://doi.org/10.1038/nmeth.4499}
 }
 
-% schindler2019thesis
 @mastersthesis{schindler2019thesis,
   author = {Schindler, Ondřej},
   title  = {Empirické metody pro výpočet parciálních atomových nábojů [online]},
@@ -67,7 +63,6 @@
   url    = {https://is.muni.cz/th/ts2kg/}
 }
 
-% wojdyr2022gemmi
 @article{wojdyr2022gemmi,
   doi       = {10.21105/joss.04200},
   url       = {https://doi.org/10.21105/joss.04200},
@@ -81,7 +76,6 @@
   journal   = {Journal of Open Source Software}
 } 
 
-% schindler2023alphacharges
 @article{schindler2023alphacharges,
   author   = {Schindler, Ondřej and Berka, Karel and Cantara, Alessio and Křenek, Aleš and Tichý, Dominik and Raček, Tomáš and Svobodová, Radka},
   title    = {{αCharges: partial atomic charges for AlphaFold structures in high quality}},
@@ -96,7 +90,6 @@
   eprint   = {https://academic.oup.com/nar/advance-article-pdf/doi/10.1093/nar/gkad349/50252244/gkad349.pdf}
 }
 
-% jumper2021alphafold
 @article{jumper2021alphafold,
   author   = {Jumper, John
               and Evans, Richard
@@ -146,7 +139,6 @@
   url      = {https://doi.org/10.1038/s41586-021-03819-2}
 }
 
-% schindler2021sqe
 @article{schindler2021sqe,
   author   = {Schindler, Ond{\v{r}}ej
               and Ra{\v{c}}ek, Tom{\'a}{\v{s}}
@@ -168,7 +160,6 @@
   url      = {https://doi.org/10.1186/s13321-021-00528-w}
 }
 
-% kraulis1991molscript
 @article{kraulis1991molscript,
   author   = {Kraulis, P. J.},
   title    = {{{\it MOLSCRIPT}: a program to produce both detailed and schematic plots of protein structures}},
@@ -183,7 +174,6 @@
   abstract = {The {\it MOLSCRIPT} program produces plots of protein structures using several different kinds of representations. Schematic drawings, simple wire models, ball-and-stick models, CPK models and text labels can be mixed freely. The schematic drawings are shaded to improve the illusion of three dimensionality. A number of parameters affecting various aspects of the objects drawn can be changed by the user. The output from the program is in PostScript format.}
 }
 
-% varadi2021alphafold
 @article{varadi2021alphafold,
   author   = {Varadi, Mihaly and Anyango, Stephen and Deshpande, Mandar and Nair, Sreenath and Natassia, Cindy and Yordanova, Galabina and Yuan, David and Stroe, Oana and Wood, Gemma and Laydon, Agata and Žídek, Augustin and Green, Tim and Tunyasuvunakool, Kathryn and Petersen, Stig and Jumper, John and Clancy, Ellen and Green, Richard and Vora, Ankur and Lutfi, Mira and Figurnov, Michael and Cowie, Andrew and Hobbs, Nicole and Kohli, Pushmeet and Kleywegt, Gerard and Birney, Ewan and Hassabis, Demis and Velankar, Sameer},
   title    = {{AlphaFold Protein Structure Database: massively expanding the structural coverage of protein-sequence space with high-accuracy models}},
@@ -200,7 +190,6 @@
   eprint   = {https://academic.oup.com/nar/article-pdf/50/D1/D439/43502749/gkab1061.pdf}
 }
 
-% delano2002pymol
 @article{delano2002pymol,
   title     = {Pymol: An open-source molecular graphics tool},
   author    = {DeLano, Warren L and others},
@@ -212,7 +201,6 @@
   publisher = {Citeseer}
 }
 
-% rose2015ngl
 @article{rose2015ngl,
   author   = {Rose, Alexander S. and Hildebrand, Peter W.},
   title    = {{NGL Viewer: a web application for molecular visualization}},
@@ -229,7 +217,6 @@
   eprint   = {https://academic.oup.com/nar/article-pdf/43/W1/W576/7476193/gkv402.pdf}
 }
 
-% prlic2019biojava
 @article{prlic2019biojava,
   doi       = {10.1371/journal.pcbi.1006791},
   author    = {Lafita, Aleix AND Bliven, Spencer AND Prlić, Andreas AND Guzenko, Dmytro AND Rose, Peter W. AND Bradley, Anthony AND Pavan, Paolo AND Myers-Turnbull, Douglas AND Valasatava, Yana AND Heuer, Michael AND Larson, Matt AND Burley, Stephen K. AND Duarte, Jose M.},
@@ -245,7 +232,6 @@
   number    = {2}
 }
 
-% humphrey1996vmd
 @article{humphrey1996vmd,
   title    = {VMD: Visual molecular dynamics},
   journal  = {Journal of Molecular Graphics},
@@ -262,7 +248,6 @@
 }
 
 
-% pettersen2004ucsf
 @article{goddard2018ucsf,
   author   = {Goddard, Thomas D. and Huang, Conrad C. and Meng, Elaine C. and Pettersen, Eric F. and Couch, Gregory S. and Morris, John H. and Ferrin, Thomas E.},
   title    = {UCSF ChimeraX: Meeting modern challenges in visualization and analysis},
@@ -278,7 +263,6 @@
   year     = {2018}
 }
 
-% kraulis1991molscript
 @article{kraulis1991molscript,
   author   = {Kraulis, P. J.},
   title    = {{{\it MOLSCRIPT}: a program to produce both detailed and schematic plots of protein structures}},
@@ -291,4 +275,12 @@
   doi      = {10.1107/S0021889891004399},
   url      = {https://doi.org/10.1107/S0021889891004399},
   abstract = {The {\it MOLSCRIPT} program produces plots of protein structures using several different kinds of representations. Schematic drawings, simple wire models, ball-and-stick models, CPK models and text labels can be mixed freely. The schematic drawings are shaded to improve the illusion of three dimensionality. A number of parameters affecting various aspects of the objects drawn can be changed by the user. The output from the program is in PostScript format.}
+}
+
+@book{gu2009structural,
+  title     = {Structural bioinformatics},
+  author    = {Gu, Jenny and Bourne, Philip E},
+  volume    = {44},
+  year      = {2009},
+  publisher = {John Wiley \& Sons}
 }
